add edited condition

--- a/.github/workflows/milestone-checker.yml
+++ b/.github/workflows/milestone-checker.yml
@@ -5,6 +5,7 @@ on:
     types:
       - ready_for_review
       - synchronize
+      - edited
   pull_request_review:
     types:
       - submitted
