--- a/.github/workflows/milestone-checker.yml
+++ b/.github/workflows/milestone-checker.yml
@@ -20,29 +20,11 @@ jobs:
   triage:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/github-script@v3
-        id: get-pr-number
+      - name: milestone check
+        if: ${{github.event.milestone}} == null
+        uses: actions/github-script@v3
         with:
           script: |
-            switch (context.eventName) {
-              case 'pull_request':
-              case 'pull_request_review':
-                return context.issue.number
-              case 'workflow_run':
-                if (context.payload.workflow_run.pull_requests.length !== 1) {
-                  return 0
-                }
-                return context.payload.workflow_run.pull_requests[0].number
-              default:
-                throw 'invalid trigger event'
-            }
-          result-encoding: string
-
-#      - name: milestone check
-#        if: ${{github.event.milestone}} == null
-#        uses: actions/github-script@v3
-#        with:
-#          script: |
-#            core.setFailed('마일스톤 입력은 필수입니다')
+            core.setFailed('마일스톤 입력은 필수입니다')
 
 
