--- a/.github/workflows/milestone-checker.yml
+++ b/.github/workflows/milestone-checker.yml
@@ -10,43 +10,33 @@ on:
     types:
       - submitted
 
-#jobs:
-#  triage:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - name: milestone check
-#        if: ${{github.event.milestone}} == null
-#        uses: actions/github-script@v3
-#        with:
-#          script: |
-#            core.setFailed('마일스톤 입력은 필수입니다')
-
-
 jobs:
-  one:
-    runs-on: ubuntu-latest
+  triage:
+    runs-on: ubuntu-18.04
     steps:
-      - name: Dump GitHub context
-        env:
-          GITHUB_CONTEXT: ${{ toJSON(github) }}
-        run: echo "$GITHUB_CONTEXT"
-      - name: Dump job context
-        env:
-          JOB_CONTEXT: ${{ toJSON(job) }}
-        run: echo "$JOB_CONTEXT"
-      - name: Dump steps context
-        env:
-          STEPS_CONTEXT: ${{ toJSON(steps) }}
-        run: echo "$STEPS_CONTEXT"
-      - name: Dump runner context
-        env:
-          RUNNER_CONTEXT: ${{ toJSON(runner) }}
-        run: echo "$RUNNER_CONTEXT"
-      - name: Dump strategy context
-        env:
-          STRATEGY_CONTEXT: ${{ toJSON(strategy) }}
-        run: echo "$STRATEGY_CONTEXT"
-      - name: Dump matrix context
-        env:
-          MATRIX_CONTEXT: ${{ toJSON(matrix) }}
-        run: echo "$MATRIX_CONTEXT"
+      - uses: actions/github-script@v3
+        id: get-pr-number
+        with:
+          script: |
+            switch (context.eventName) {
+              case 'pull_request':
+              case 'pull_request_review':
+                return context.issue.number
+              case 'workflow_run':
+                if (context.payload.workflow_run.pull_requests.length !== 1) {
+                  return 0
+                }
+                return context.payload.workflow_run.pull_requests[0].number
+              default:
+                throw 'invalid trigger event'
+            }
+          result-encoding: string
+
+      - name: milestone check
+        if: ${{github.event.milestone}} == null
+        uses: actions/github-script@v3
+        with:
+          script: |
+            core.setFailed('마일스톤 입력은 필수입니다')
+
+
