--- a/.github/workflows/milestone-checker.yml
+++ b/.github/workflows/milestone-checker.yml
@@ -34,6 +34,9 @@ jobs:
 
       - name: milestone check
         if: ${{github.event.pull_request.milestone}} == null
+        env:
+          GITHUB_CONTEXT: ${{ toJSON(github) }}
+        run: echo "$GITHUB_CONTEXT"
         uses: actions/github-script@v3
         with:
           script: |
