--- a/.github/workflows/milestone-checker.yml
+++ b/.github/workflows/milestone-checker.yml
@@ -38,9 +38,16 @@ jobs:
         run: echo "milestone ${{toJSON(github.event.pull_request.milestone)}}"
       - name: milestone check
         if: github.event.pull_request.milestone == null
+        env:
+          PULL_NUMBER: '${{github.event.pull_request.number}}'
         uses: actions/github-script@v3
         with:
           script: |
-            core.setFailed('마일스톤 입력은 필수입니다')
+            github.pulls.createReviewComment({
+              pull_number: $PULL_NUMBER,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '마일스톤 입력은 필수입니다'
+            })
 
 
