--- a/.github/workflows/milestone-checker.yml
+++ b/.github/workflows/milestone-checker.yml
@@ -46,6 +46,8 @@ jobs:
           script: |
             const { PULL_NUMBER } = process.env
 
+            console.log(`owner: ${context.repo.owner}, repo: ${context.repo.repo}`)
+
             github.pulls.createReviewComment({
               pull_number: PULL_NUMBER,
               owner: context.repo.owner,
