--- a/.github/workflows/pr-title-linter.yml
+++ b/.github/workflows/pr-title-linter.yml
@@ -3,7 +3,7 @@ name: ready-to-merge
 on:
   pull_request:
     types:
-      - open
+      - opened
       - ready_for_review
       - synchronize
       - edited
