--- a/.github/workflows/pr-title-linter.yml
+++ b/.github/workflows/pr-title-linter.yml
@@ -19,7 +19,7 @@ jobs:
             const titleRegex = new RegExp('^\[[A-Z]{1}[A-Z0-9]{1,9}\-\d+\]\ [^\ ].*$');
             const titleMatchesRegex = titleRegex.test(title);
 
-            const title = github.context.payload.pull_request?.title as string;
+            const title = github.context.payload.pull_request.title;
 
             if(!titleMatchesRegex) {
                 github.issues.createComment({
