--- a/.github/workflows/pr-title-linter.yml
+++ b/.github/workflows/pr-title-linter.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/github-script@v4
         with:
           script: |
-            const titleRegex = new RegExp('^\[[A-Z]{1}[A-Z0-9]{1,9}\-\d+\]\ [^\ ].*$');
+            const titleRegex = /^\[[A-Z]{1}[A-Z0-9]{1,9}\-\d+\]\ [^\ ].*$/i
             const title = context.payload.pull_request.title;
 
 
