--- a/.github/workflows/pr-title-linter.yml
+++ b/.github/workflows/pr-title-linter.yml
@@ -11,6 +11,9 @@ on:
       - 'feature-base/*'
       - 'feature/*'
 
+    branches-ignore:
+      - 'feature/*'
+
 jobs:
   pr-title-lint:
     runs-on: ubuntu-18.04
