pr 본문을 날아가지않도록 방지

--- a/.github/workflows/some-file-checklist.yml
+++ b/.github/workflows/some-file-checklist.yml
@@ -27,14 +27,16 @@ jobs:
         with:
           script: |
 
-            const body = `
-            ### CheckList
-              - [ ] idl을 업데이트하시는 분께서는 각 플랫폼별로 담당자를 아래 항목에 멘션해주세요.
-                - [ ] web {작업자} {작업한 PR 링크}
-                - [ ] iOS  {작업자} {작업한 PR 링크}
-                - [ ] Android {작업자} {작업한 PR 링크}
-              - [ ] 작업이 완료된 이후 PR 링크를 위 리스트에 첨부해주시고, 테스트가 완료되어 머지할 준비가 되면 체크해주세요.
-              - [ ] 세 플랫폼의 개발계에서 문제없이 동작하는지 확인해주세요. 이후 idl PR을 머지할 수 있습니다.
+            const template = `
+              ${context.payload.pull_request.body}
+
+              ### CheckList
+                - [ ] idl을 업데이트하시는 분께서는 각 플랫폼별로 담당자를 아래 항목에 멘션해주세요.
+                  - [ ] web {작업자} {작업한 PR 링크}
+                  - [ ] iOS  {작업자} {작업한 PR 링크}
+                  - [ ] Android {작업자} {작업한 PR 링크}
+                - [ ] 작업이 완료된 이후 PR 링크를 위 리스트에 첨부해주시고, 테스트가 완료되어 머지할 준비가 되면 체크해주세요.
+                - [ ] 세 플랫폼의 개발계에서 문제없이 동작하는지 확인해주세요. 이후 idl PR을 머지할 수 있습니다.
             `
 
             github.pulls.update({
