--- a/.github/workflows/some-file-checklist.yml
+++ b/.github/workflows/some-file-checklist.yml
@@ -43,5 +43,5 @@ jobs:
                owner: context.repo.owner,
                repo: context.repo.repo,
                pull_number: context.payload.pull_request.number,
-               body: body
+               body: template
             });
